crates/ridge-parser/tests/fixtures/errors/p001_missing_then.ridge
-- expect: P001
-- Trigger: if expression missing `then` keyword.
-- Source: fn body is a block so parse_expr (keyword-dispatching) is used.
fn f =
    if x 1 else 2
